--- a/www/index.html
+++ b/www/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasklist - dps32</title>
+    <link rel="stylesheet" href="css/index.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="js/index.js"></script>
 </head>
 <body>
-    
+    <div class="tasklist">
+        <div class="list"></div>
+        <input id="inputTask" type="text">
+        <button id="inputBtn">Añadir</button>
+    </div>
 </body>
 </html>
