--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
     <div class="tasklist">
-        <div class="list"></div>
+        <div class="list">
+            <div class="task">a</div>
+            <div class="task">a</div>
+            <div class="task">a</div>
+        </div>
         <button id="inputBtn">Añadir</button>
     </div>
 </body>
