--- a/www/index.html
+++ b/www/index.html
@@ -10,11 +10,7 @@
 </head>
 <body>
     <div class="tasklist">
-        <div class="list">
-            <div class="task">a</div>
-            <div class="task">a</div>
-            <div class="task">a</div>
-        </div>
+        <div class="list"></div>
         <button id="inputBtn">Añadir</button>
     </div>
 </body>
